# python-project-52

./: .gitignore  Makefile  README.md  build.sh  manage.py  pyproject.toml
.github/workflows/: pyci.yml
task_manager/: __init__.py  helpers.py  mixins.py  settings.py  templates_enum.py  tests.py  urls.py  view.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_label.json  test_status.json  test_task.json  test_user.json  users.json
task_manager/labels/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: __init__.py  test_commands.py  test_forms.py  test_models.py  test_queries.py  testcase.py
task_manager/statuses/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_date_created.py
task_manager/statuses/tests/: test_commands.py  test_forms.py  test_models.py  test_queries.py  testcase.py
task_manager/task_manager/: settings.py
task_manager/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_author.py  0003_alter_task_description_alter_task_labels.py  0004_alter_task_executor_alter_tasklabel_task.py
task_manager/tasks/tests/: test_commands.py  test_forms.py  test_models.py  test_queries.py  testcase.py
task_manager/templates/: 404.html  delete.html  form.html  index.html  label_list.html  layout.html  navbar.html  status_list.html  task_detail.html  task_list.html  user_list.html
task_manager/templates/statuses/: delete.html
task_manager/templates/users/: delete.html  users.html
task_manager/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+8 files in other folders)
