[project]
name = "hexlet-code"
version = "0.1.0"
authors = [{ name = "Mikhail Kokuev"}]
description = "Task manager"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "python-decouple>=3.8",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
